--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/memory-cache": "^0.2.1",
+    "@types/uuid": "^8.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
