--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cvmakerapi",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -20,19 +21,20 @@
     "memory-cache": "^0.2.0",
     "mongoose": "^5.13.3",
     "svg-captcha": "^1.4.0",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/memory-cache": "^0.2.1",
-    "@types/uuid": "^8.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/md5": "^2.3.1",
+    "@types/memory-cache": "^0.2.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.3",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
