--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon index.ts",
-    "build": "tsc --project ./ && node build/index.js"
+    "start": "tsc --project ./ && node build/index.js"
   },
   "author": "",
   "license": "ISC",
