--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cvmakerapi",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts",
+    "dev": "NODE_ENV=development nodemon index.ts",
     "tsc": "./node_modules/typescript/bin/tsc",
     "build": "tsc --project ./",
     "postinstall": "npm run build",
