--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon index.ts",
+    "dev": "NODE_ENV=development nodemon --delay 500ms index.ts",
     "tsc": "./node_modules/typescript/bin/tsc",
     "build": "tsc --project ./",
     "postinstall": "npm run build",
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
+    "avatar-builder": "^1.0.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -23,6 +25,7 @@
     "md5": "^2.3.0",
     "memory-cache": "^0.2.0",
     "mongoose": "^5.13.3",
+    "multer": "^1.4.2",
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
