--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "avatar-builder": "^1.0.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.26.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.1",
