--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "memory-cache": "^0.2.0",
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
@@ -41,6 +42,7 @@
     "@types/memory-cache": "^0.2.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
