--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,20 @@
 version: "3.9"
 services:
+
+  mongo:
+    image: mongo:4.4.6
+    restart: always
+    volumes:
+      - ./db:/data/db
+    ports:
+      - "27017:27017"
+    #    environment:
+    #      MONGO_INITDB_DATABASE : "handover"
+    #      MONGO_INITDB_ROOT_USERNAME : "username"
+    #      MONGO_INITDB_ROOT_PASSWORD : "password"
+    networks:
+      - network
+
   resumaxapi:
     image: node:17.8.0
     restart: always
