--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
     restart: always
 #    ports:
 #      - "3000:3000"
-    volumes:
-      - ./app:/app
+#    volumes:
+#      - ./app:/app
 #    env_file:
 #      - ./vars.env
     working_dir: /app
