--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
   mongo:
     image: mongo:4.4.6
     restart: always
-#    volumes:
-#      - ./db:/data/db
+    volumes:
+      - ./db:/data/db
 #    ports:
 #      - "27017:27017"
     #    environment:
@@ -20,10 +20,10 @@ services:
     restart: always
 #    ports:
 #      - "3000:3000"
-#    volumes:
-#      - ./app:/app
-#    env_file:
-#      - ./vars.env
+    volumes:
+      - ./app:/app
+    env_file:
+      - ./vars.env
     working_dir: /app
     networks:
       - network
