--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
   mongo:
     image: mongo:4.4.6
     restart: always
-#    volumes:
-#      - ./db:/data/db
+    volumes:
+      - ./db:/data/db
 #    ports:
 #      - "27017:27017"
     #    environment:
