--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     working_dir: /app
     networks:
       - network
-    command: bash -c "npm install && npm run build && npm start"
+    command: bash -c "cd app && npm install && npm run build && npm start"
 
 networks:
   network:
