--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
 #    ports:
 #      - "3000:3000"
     volumes:
-      - ./app:/app
+      - /root/resumaxapi/app:/app
 #    env_file:
 #      - ./vars.env
     working_dir: /app
